--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vis",
-  "version": "4.17.0",
+  "name": "@lacework/vis-fork",
+  "version": "4.17.1-2",
   "description": "A dynamic, browser-based visualization library.",
   "homepage": "http://visjs.org/",
   "license": "(Apache-2.0 OR MIT)",
